cicd: Fix uploads to release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,23 +16,10 @@ jobs:
         with:
           files: firefox/
           dest: firefox-extension.zip
-      - name: Upload Chrome Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ${{ github.workspace }}/chrome-extension.zip
-          asset_name: chrome-extension.zip
-          asset_content_type: application/zip
-      - name: Upload Firefox Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ${{ github.workspace }}/firefox-extension.zip
-          asset_name: firefox-extension.zip
-          asset_content_type: application/zip
+          files: |
+            chrome-extension.zip
+            firefox-extension.zip
